[metadata]
name = logging_tz
author = Wim Glenn
author-email = hey@wimglenn.com
summary = Specify the UTC offset in Python 2 logging
description-file = README.rst
home-page = https://github.com/wimglenn/logging_tz
requires-python = <3
requires-dist =
    pytz
    tzlocal
tests-require =
    pytest
    freezegun
    mock
license = MIT
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
keywords =
    logging
    datetime
    timezone

[files]
modules = logging_tz

[tool:pytest]
addopts = --verbose

[wheel]
python-tag = py2
