[metadata]
name = logging_tz
version = attr: logging_tz.__version__
url = https://github.com/wimglenn/logging_tz
author = Wim Glenn
author_email = hey@wimglenn.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
license = MIT
description = Specify the UTC offset in Python 2 logging
long_description = file: README.rst
long_description_content_type = utf-8
keywords =
    logging
    datetime
    timezone

[options]
python_requires = <3
py_modules = logging_tz
install_requires =
    pytz
    tzlocal
tests_require =
    pytest
    freezegun
    mock

[tool:pytest]
addopts = --verbose

[wheel]
python-tag = py2
