[metadata]
name = logging_tz
version = 0.1
url = https://github.com/wimglenn/logging_tz
author = Wim Glenn
author_email = hey@wimglenn.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Topic :: System :: Logging
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
license = MIT
description = Specify the UTC offset in Python 2 logging
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords = logging, datetime, timezone

[options]
python_requires = <3
py_modules = logging_tz
install_requires =
    pytz
    tzlocal
setup_requires =
    pytest-runner
tests_require =
    pytest
    freezegun
    mock

[aliases]
test = pytest

[wheel]
python-tag = py2
